# HybridGauge

./: .gitignore  package-lock.json  package.json
src/: App.css  App.jsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lhm_bridge.rs  lib.rs  monitor.rs  settings.rs
src-tauri/windows/: main.manifest
