[package]
name = "hybrid-gauge"
version = "0.1.0"
description = "HybridGauge - NVIDIA/AMD GPU & CPU Monitor"
authors = ["shuns"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nvml-wrapper = "0.10"
sysinfo = "0.32"
wmi = "0.14"
parking_lot = "0.12"
libloading = "0.8"
confy = "0.6"
ureq = { version = "2", default-features = false }
